[package]
name = "esp-can-rx"
version = "0.1.0"
authors = ["Christian Heussy <heussy@amazon.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["debug"]
pio = ["esp-idf-sys/pio"]
debug = []

[dependencies]
anyhow = "1"
bitvec = { version = "1.0.1", default-features = false }
embedded-can = "0.4.1"
embedded-hal = "0.2.7"
esp-idf-hal = "0.41.2"
esp-idf-sys = { version = "0.33.2", features = ["binstart"] }
postcard = "1.0.2"
serde = { features = ["derive"] }

[build-dependencies]
embuild = "0.31.3"
anyhow = "1"
dbc-codegen = { version = "0.2.0", features = ["std"] }
